# FinishLine2.0

./: .clang-tidy  .gitignore  CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-build-linting.yml  cmake-single-platform.yml
cpp/: main.cpp
headers/: crawler.h  imputer.h  scaler.h  webScraper.h
src/: imputer.cpp  main.cpp  scaler.cpp  webScraper.cpp
src/data_transforms/: imputer.cpp
src/web_scraper/: web_scraping.cpp
tests/: CMakeLists.txt
tests/helper/: helpers.h
tests/unit/: imputer_constant.cpp  imputer_mean.cpp  imputer_median.cpp
tests/unit/imputer/: imputer_constant.cpp  imputer_frequency.cpp  imputer_transform.cpp
tests/unit/scaler/: scaler_min_max.cpp  scaler_standardizer.cpp
